# db-facade

./: CHANEGLOG.md  CMakeLists.txt  Contributors  README.md  dbfacade-tests.dockerfile  dbfacade.dockerfile  docker_entrypoint.sh  sonar-project.properties
examples/: CMakeLists.txt  base_operations.cc  complex_operations.cc  migration.cc  typeconverters.cc
extensions/migration/: CMakeLists.txt
extensions/migration/tests/: CMakeLists.txt  db_migration_tasks.cc
extensions/mysql/: CMakeLists.txt
extensions/mysql/src/: mysqlconnection.cc  mysqlexception.cc  mysqlquerybuilder.cc
extensions/mysql/tests/: CMakeLists.txt  main.cc
include/dbfacade/: alter.hh  base_constraint.hh  cell.hh  cellrepresentation.hh  columndatetime.hh  columntypes.hh  condition.hh  connection.hh  constraints.hh  createtable.hh  drop.hh  facade.hh  insert.hh  join.hh  orderby.hh  remove.hh  resultlimit.hh  select.hh  sqlexception.hh  sqliteconnection.hh  sqliteexception.hh  sqlquery.hh  sqlquerybuilder.hh  sqlvalue.hh  tablescheme.hh  token.hh  transaction.hh  typeconverter.hh  typehint.hh  typeserializers.hh  update.hh  version.hh.in
include/dbfacade/extensions/migration/: migration.hh
include/dbfacade/extensions/mysql/: mysqlconnection.hh  mysqlexception.hh  mysqlquerybuilder.hh
src/: alter.cc  cellrepresentation.cc  columndatetime.cc  columntypes.cc  constraints.cc  createtable.cc  drop.cc  facade.cc  insert.cc  join.cc  remove.cc  resultlimit.cc  select.cc  sqlexception.cc  sqliteconnection.cc  sqliteexception.cc  sqlquery.cc  sqlquerybuilder.cc  sqlvalue.cc  tablescheme.cc  transaction.cc  update.cc  version.cc
tests/: CMakeLists.txt  main.cc
tests/commontests/: CMakeLists.txt  alter.cc  cascade.cc  createtable.cc  drop.cc  insert.cc  join.cc  multithreading.cc  remove.cc  select.cc  testfixture.cc  transaction.cc  typeconverters.cc  update.cc  verifyscheme.cc
tests/commontests/include/commontests/: fakeconnection.hh  testfixture.hh
tests/sqlite/: CMakeLists.txt  main.cc
tools/cmake/: FindSQLite3.cmake
